Add pagination to Transactions component for improved navigation and user experience, including active button styling in CSS.

--- a/src/App.css
+++ b/src/App.css
@@ -180,3 +180,8 @@ main {
 
 /* =============================================== */
 /* Components */
+
+.pagination__btn--active {
+  background-color: rgb(var(--clr-grey-900));
+  color: rgb(var(--clr-white));
+}
