Implement new structure for adding budgets

--- a/src/App.css
+++ b/src/App.css
@@ -237,3 +237,14 @@ main {
   font-size: 24px;
   cursor: pointer;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
