--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -205,7 +205,7 @@ main {
 
 /* =============================================== */
 /* Modals */
-.modal-container {
+.modal-backdrop  {
   position: fixed;
   top: 0;
   left: 0;
@@ -229,13 +229,13 @@ main {
 }
 
 .modal-close {
-  position: absolute;
+  /* position: absolute;
   top: 10px;
   right: 15px;
   background: none;
   border: none;
   font-size: 24px;
-  cursor: pointer;
+  cursor: pointer; */
 }
 
 input[type="number"]::-webkit-outer-spin-button,
