--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -205,7 +205,7 @@ main {
 
 /* =============================================== */
 /* Modals */
-.modal-backdrop  {
+.modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -228,14 +228,14 @@ main {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.modal-close {
-  /* position: absolute;
-  top: 10px;
-  right: 15px;
-  background: none;
-  border: none;
-  font-size: 24px;
-  cursor: pointer; */
+.modal-content-edit-delete {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  width: 90%;
+  max-width: 150px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 input[type="number"]::-webkit-outer-spin-button,
