--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,3 +106,13 @@
 body {
   @apply bg-beige-100;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
